--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ a {
     display: flex;
     flex-direction: column;
     min-width: var(--min-width);
-    background-image: url('img/background1.jpg');
+    background-image: url('img/background4.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -125,11 +125,16 @@ a {
 
 .footer-wrapper {
     background-color: black;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
 
 .footer {
     display: flex;
     justify-content: space-between;
+    padding: 20px;
 }
 
 .footer__widget {
